Avoid overlapping tekst.

--- a/themes/kaykay/css/print.css
+++ b/themes/kaykay/css/print.css
@@ -39,15 +39,13 @@ body,
 
 .views-field-field-event-time-1,
 .print-item-content .field-name-field-event-time {
-  position: absolute;
-  bottom: 10px;
   font-size: 17px;
   font-weight: bold;
   text-transform: uppercase;
 }
 
 .print-item-content .field-name-body {
-margin-bottom: 20px;
+  margin-bottom: 1em;
 }
 
 .print-item-content p, a, span, div  {
